internal/pic/y.output

state 0
	$accept: .top $end 
	top: .    (2)

	$end  reduce 2 (src line 90)
	error  shift 3
	BOX  shift 16
	LINE  shift 20
	ARROW  shift 21
	CIRCLE  shift 17
	ELLIPSE  shift 18
	ARC  shift 19
	SPLINE  shift 22
	TEXT  shift 35
	TROFF  shift 25
	MOVE  shift 23
	PRINT  shift 10
	RESET  shift 11
	FOR  shift 30
	IF  shift 31
	COPY  shift 29
	PLACENAME  shift 7
	VARNAME  shift 28
	SPRINTF  shift 36
	DIR  shift 9
	ST  shift 15
	'{'  shift 27
	'['  shift 33
	.  error

	asgn  goto 8
	text  goto 34
	if  goto 14
	for  goto 13
	copy  goto 12
	leftbrace  goto 6
	picture  goto 4
	piclist  goto 2
	lbracket  goto 26
	prim  goto 5
	textlist  goto 24
	textattr  goto 32
	top  goto 1

state 1
	$accept:  top.$end 

	$end  accept
	.  error


state 2
	top:  piclist.    (1)
	piclist:  piclist.picture 

	BOX  shift 16
	LINE  shift 20
	ARROW  shift 21
	CIRCLE  shift 17
	ELLIPSE  shift 18
	ARC  shift 19
	SPLINE  shift 22
	TEXT  shift 35
	TROFF  shift 25
	MOVE  shift 23
	PRINT  shift 10
	RESET  shift 11
	FOR  shift 30
	IF  shift 31
	COPY  shift 29
	PLACENAME  shift 7
	VARNAME  shift 28
	SPRINTF  shift 36
	DIR  shift 9
	ST  shift 15
	'{'  shift 27
	'['  shift 33
	.  reduce 1 (src line 88)

	asgn  goto 8
	text  goto 34
	if  goto 14
	for  goto 13
	copy  goto 12
	leftbrace  goto 6
	picture  goto 37
	lbracket  goto 26
	prim  goto 5
	textlist  goto 24
	textattr  goto 32

state 3
	top:  error.    (3)

	.  reduce 3 (src line 91)


state 4
	piclist:  picture.    (4)

	.  reduce 4 (src line 94)


state 5
	picture:  prim.ST 

	ST  shift 38
	.  error


state 6
	picture:  leftbrace.piclist '}' 

	BOX  shift 16
	LINE  shift 20
	ARROW  shift 21
	CIRCLE  shift 17
	ELLIPSE  shift 18
	ARC  shift 19
	SPLINE  shift 22
	TEXT  shift 35
	TROFF  shift 25
	MOVE  shift 23
	PRINT  shift 10
	RESET  shift 11
	FOR  shift 30
	IF  shift 31
	COPY  shift 29
	PLACENAME  shift 7
	VARNAME  shift 28
	SPRINTF  shift 36
	DIR  shift 9
	ST  shift 15
	'{'  shift 27
	'['  shift 33
	.  error

	asgn  goto 8
	text  goto 34
	if  goto 14
	for  goto 13
	copy  goto 12
	leftbrace  goto 6
	picture  goto 4
	piclist  goto 39
	lbracket  goto 26
	prim  goto 5
	textlist  goto 24
	textattr  goto 32

state 7
	picture:  PLACENAME.':' picture 
	picture:  PLACENAME.':' ST picture 
	picture:  PLACENAME.':' position ST 

	':'  shift 40
	.  error


state 8
	picture:  asgn.ST 

	ST  shift 41
	.  error


state 9
	picture:  DIR.    (12)

	.  reduce 12 (src line 106)


state 10
	picture:  PRINT.expr ST 
	picture:  PRINT.position ST 
	picture:  PRINT.text ST 

	TEXT  shift 35
	PLACENAME  shift 52
	VARNAME  shift 46
	SPRINTF  shift 36
	CORNER  shift 66
	HERE  shift 67
	LAST  shift 69
	NTH  shift 54
	NUMBER  shift 45
	LOG  shift 56
	EXP  shift 57
	SIN  shift 58
	COS  shift 59
	ATAN2  shift 60
	SQRT  shift 61
	RAND  shift 62
	MIN  shift 64
	MAX  shift 63
	INT  shift 65
	'+'  shift 49
	'-'  shift 48
	NOT  shift 55
	'('  shift 50
	.  error

	expr  goto 42
	asgn  goto 47
	text  goto 44
	position  goto 43
	place  goto 51
	blockname  goto 68
	last  goto 53

11: shift/reduce conflict (shift 71(0), red'n 21(0)) on VARNAME
state 11
	picture:  RESET.varlist ST 
	varlist: .    (21)

	VARNAME  shift 71
	.  reduce 21 (src line 117)

	varlist  goto 70

state 12
	picture:  copy.    (17)

	.  reduce 17 (src line 111)


state 13
	picture:  for.    (18)

	.  reduce 18 (src line 112)


state 14
	picture:  if.    (19)

	.  reduce 19 (src line 113)


state 15
	picture:  ST.    (20)

	.  reduce 20 (src line 114)


state 16
	prim:  BOX.attrlist 
	attrlist: .    (62)

	.  reduce 62 (src line 199)

	attrlist  goto 72

state 17
	prim:  CIRCLE.attrlist 
	attrlist: .    (62)

	.  reduce 62 (src line 199)

	attrlist  goto 73

state 18
	prim:  ELLIPSE.attrlist 
	attrlist: .    (62)

	.  reduce 62 (src line 199)

	attrlist  goto 74

state 19
	prim:  ARC.attrlist 
	attrlist: .    (62)

	.  reduce 62 (src line 199)

	attrlist  goto 75

state 20
	prim:  LINE.attrlist 
	attrlist: .    (62)

	.  reduce 62 (src line 199)

	attrlist  goto 76

state 21
	prim:  ARROW.attrlist 
	attrlist: .    (62)

	.  reduce 62 (src line 199)

	attrlist  goto 77

state 22
	prim:  SPLINE.attrlist 
	attrlist: .    (62)

	.  reduce 62 (src line 199)

	attrlist  goto 78

state 23
	prim:  MOVE.attrlist 
	attrlist: .    (62)

	.  reduce 62 (src line 199)

	attrlist  goto 79

24: shift/reduce conflict (shift 35(0), red'n 62(0)) on TEXT
24: shift/reduce conflict (shift 36(0), red'n 62(0)) on SPRINTF
state 24
	prim:  textlist.attrlist 
	textlist:  textlist.textattr 
	attrlist: .    (62)

	TEXT  shift 35
	SPRINTF  shift 36
	.  reduce 62 (src line 199)

	text  goto 34
	textattr  goto 81
	attrlist  goto 80

state 25
	prim:  TROFF.    (57)

	.  reduce 57 (src line 188)


state 26
	prim:  lbracket.piclist ']' $$58 attrlist 

	BOX  shift 16
	LINE  shift 20
	ARROW  shift 21
	CIRCLE  shift 17
	ELLIPSE  shift 18
	ARC  shift 19
	SPLINE  shift 22
	TEXT  shift 35
	TROFF  shift 25
	MOVE  shift 23
	PRINT  shift 10
	RESET  shift 11
	FOR  shift 30
	IF  shift 31
	COPY  shift 29
	PLACENAME  shift 7
	VARNAME  shift 28
	SPRINTF  shift 36
	DIR  shift 9
	ST  shift 15
	'{'  shift 27
	'['  shift 33
	.  error

	asgn  goto 8
	text  goto 34
	if  goto 14
	for  goto 13
	copy  goto 12
	leftbrace  goto 6
	picture  goto 4
	piclist  goto 82
	lbracket  goto 26
	prim  goto 5
	textlist  goto 24
	textattr  goto 32

state 27
	leftbrace:  '{'.    (47)

	.  reduce 47 (src line 174)


state 28
	asgn:  VARNAME.'=' expr 

	'='  shift 83
	.  error


state 29
	copy:  COPY.copylist 

	TEXT  shift 35
	THRU  shift 87
	UNTIL  shift 88
	SPRINTF  shift 36
	.  error

	text  goto 86
	copylist  goto 84
	copyattr  goto 85

state 30
	for:  FOR.name FROM expr TO expr BY optop expr DOSTR 
	for:  FOR.name FROM expr TO expr DOSTR 
	for:  FOR.name '=' expr TO expr BY optop expr DOSTR 
	for:  FOR.name '=' expr TO expr DOSTR 

	VARNAME  shift 90
	.  error

	name  goto 89

state 31
	if:  IF.if_expr THENSTR ELSESTR 
	if:  IF.if_expr THENSTR 

	TEXT  shift 35
	PLACENAME  shift 52
	VARNAME  shift 46
	SPRINTF  shift 36
	CORNER  shift 66
	HERE  shift 67
	LAST  shift 69
	NTH  shift 54
	NUMBER  shift 45
	LOG  shift 56
	EXP  shift 57
	SIN  shift 58
	COS  shift 59
	ATAN2  shift 60
	SQRT  shift 61
	RAND  shift 62
	MIN  shift 64
	MAX  shift 63
	INT  shift 65
	'+'  shift 49
	'-'  shift 48
	NOT  shift 55
	'('  shift 94
	.  error

	expr  goto 92
	if_expr  goto 91
	asgn  goto 47
	text  goto 93
	place  goto 95
	blockname  goto 68
	last  goto 53

32: shift/reduce conflict (shift 96(0), red'n 90(0)) on TEXTATTR
state 32
	textlist:  textattr.    (90)
	textattr:  textattr.TEXTATTR 

	TEXTATTR  shift 96
	.  reduce 90 (src line 233)


state 33
	lbracket:  '['.    (60)

	.  reduce 60 (src line 193)


34: shift/reduce conflict (shift 97(0), red'n 92(0)) on TEXTATTR
state 34
	textattr:  text.    (92)
	textattr:  text.TEXTATTR 

	TEXTATTR  shift 97
	.  reduce 92 (src line 237)


state 35
	text:  TEXT.    (95)

	.  reduce 95 (src line 242)


state 36
	text:  SPRINTF.'(' text ')' 
	text:  SPRINTF.'(' text ',' exprlist ')' 

	'('  shift 98
	.  error


state 37
	piclist:  piclist picture.    (5)

	.  reduce 5 (src line 96)


state 38
	picture:  prim ST.    (6)

	.  reduce 6 (src line 99)


state 39
	piclist:  piclist.picture 
	picture:  leftbrace piclist.'}' 

	BOX  shift 16
	LINE  shift 20
	ARROW  shift 21
	CIRCLE  shift 17
	ELLIPSE  shift 18
	ARC  shift 19
	SPLINE  shift 22
	TEXT  shift 35
	TROFF  shift 25
	MOVE  shift 23
	PRINT  shift 10
	RESET  shift 11
	FOR  shift 30
	IF  shift 31
	COPY  shift 29
	PLACENAME  shift 7
	VARNAME  shift 28
	SPRINTF  shift 36
	DIR  shift 9
	ST  shift 15
	'}'  shift 99
	'{'  shift 27
	'['  shift 33
	.  error

	asgn  goto 8
	text  goto 34
	if  goto 14
	for  goto 13
	copy  goto 12
	leftbrace  goto 6
	picture  goto 37
	lbracket  goto 26
	prim  goto 5
	textlist  goto 24
	textattr  goto 32

state 40
	picture:  PLACENAME ':'.picture 
	picture:  PLACENAME ':'.ST picture 
	picture:  PLACENAME ':'.position ST 

	BOX  shift 16
	LINE  shift 20
	ARROW  shift 21
	CIRCLE  shift 17
	ELLIPSE  shift 18
	ARC  shift 19
	SPLINE  shift 22
	TEXT  shift 35
	TROFF  shift 25
	MOVE  shift 23
	PRINT  shift 10
	RESET  shift 11
	FOR  shift 30
	IF  shift 31
	COPY  shift 29
	PLACENAME  shift 103
	VARNAME  shift 46
	SPRINTF  shift 36
	CORNER  shift 66
	HERE  shift 67
	LAST  shift 69
	NTH  shift 54
	NUMBER  shift 45
	LOG  shift 56
	EXP  shift 57
	SIN  shift 58
	COS  shift 59
	ATAN2  shift 60
	SQRT  shift 61
	RAND  shift 62
	MIN  shift 64
	MAX  shift 63
	INT  shift 65
	DIR  shift 9
	ST  shift 101
	'+'  shift 49
	'-'  shift 48
	NOT  shift 55
	'{'  shift 27
	'['  shift 33
	'('  shift 50
	.  error

	expr  goto 105
	asgn  goto 104
	text  goto 34
	if  goto 14
	for  goto 13
	copy  goto 12
	leftbrace  goto 6
	picture  goto 100
	position  goto 102
	lbracket  goto 26
	prim  goto 5
	place  goto 51
	blockname  goto 68
	textlist  goto 24
	textattr  goto 32
	last  goto 53

state 41
	picture:  asgn ST.    (11)

	.  reduce 11 (src line 105)


state 42
	picture:  PRINT expr.ST 
	position:  expr.',' expr 
	position:  expr.LT position ',' position GT 
	position:  expr.BETWEEN position AND position 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.GT expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.GE expr 
	expr:  expr.EQ expr 
	expr:  expr.NEQ expr 
	expr:  expr.ANDAND expr 
	expr:  expr.OROR expr 
	expr:  expr.'^' expr 

	BETWEEN  shift 109
	ST  shift 106
	OROR  shift 121
	ANDAND  shift 120
	GT  shift 115
	LT  shift 108
	LE  shift 116
	GE  shift 117
	EQ  shift 118
	NEQ  shift 119
	'+'  shift 110
	'-'  shift 111
	'*'  shift 112
	'/'  shift 113
	'%'  shift 114
	'^'  shift 122
	','  shift 107
	.  error


state 43
	picture:  PRINT position.ST 
	position:  position.'+' expr ',' expr 
	position:  position.'-' expr ',' expr 
	position:  position.'+' '(' expr ',' expr ')' 
	position:  position.'-' '(' expr ',' expr ')' 
	position:  position.'+' place 
	position:  position.'-' place 

	ST  shift 123
	'+'  shift 124
	'-'  shift 125
	.  error


state 44
	picture:  PRINT text.ST 

	ST  shift 126
	.  error


state 45
	expr:  NUMBER.    (139)

	.  reduce 139 (src line 307)


state 46
	asgn:  VARNAME.'=' expr 
	expr:  VARNAME.    (140)

	'='  shift 83
	.  reduce 140 (src line 309)


state 47
	expr:  asgn.    (141)

	.  reduce 141 (src line 310)


state 48
	expr:  '-'.expr 

	PLACENAME  shift 52
	VARNAME  shift 46
	CORNER  shift 66
	HERE  shift 67
	LAST  shift 69
	NTH  shift 54
	NUMBER  shift 45
	LOG  shift 56
	EXP  shift 57
	SIN  shift 58
	COS  shift 59
	ATAN2  shift 60
	SQRT  shift 61
	RAND  shift 62
	MIN  shift 64
	MAX  shift 63
	INT  shift 65
	'+'  shift 49
	'-'  shift 48
	NOT  shift 55
	'('  shift 94
	.  error

	expr  goto 127
	asgn  goto 47
	place  goto 95
	blockname  goto 68
	last  goto 53

state 49
	expr:  '+'.expr 

	PLACENAME  shift 52
	VARNAME  shift 46
	CORNER  shift 66
	HERE  shift 67
	LAST  shift 69
	NTH  shift 54
	NUMBER  shift 45
	LOG  shift 56
	EXP  shift 57
	SIN  shift 58
	COS  shift 59
	ATAN2  shift 60
	SQRT  shift 61
	RAND  shift 62
	MIN  shift 64
	MAX  shift 63
	INT  shift 65
	'+'  shift 49
	'-'  shift 48
	NOT  shift 55
	'('  shift 94
	.  error

	expr  goto 128
	asgn  goto 47
	place  goto 95
	blockname  goto 68
	last  goto 53

state 50
	position:  '('.position ')' 
	position:  '('.place ',' place ')' 
	expr:  '('.expr ')' 

	PLACENAME  shift 52
	VARNAME  shift 46
	CORNER  shift 66
	HERE  shift 67
	LAST  shift 69
	NTH  shift 54
	NUMBER  shift 45
	LOG  shift 56
	EXP  shift 57
	SIN  shift 58
	COS  shift 59
	ATAN2  shift 60
	SQRT  shift 61
	RAND  shift 62
	MIN  shift 64
	MAX  shift 63
	INT  shift 65
	'+'  shift 49
	'-'  shift 48
	NOT  shift 55
	'('  shift 50
	.  error

	expr  goto 131
	asgn  goto 47
	position  goto 129
	place  goto 130
	blockname  goto 68
	last  goto 53

state 51
	position:  place.    (100)
	expr:  place.DOTX 
	expr:  place.DOTY 
	expr:  place.DOTHT 
	expr:  place.DOTWID 
	expr:  place.DOTRAD 

	DOTX  shift 132
	DOTY  shift 133
	DOTHT  shift 134
	DOTWID  shift 135
	DOTRAD  shift 136
	.  reduce 100 (src line 253)


52: shift/reduce conflict (shift 137(0), red'n 112(0)) on CORNER
state 52
	place:  PLACENAME.    (112)
	place:  PLACENAME.CORNER 
	blockname:  PLACENAME.'.' PLACENAME 
	expr:  PLACENAME.'.' VARNAME 

	CORNER  shift 137
	'.'  shift 138
	.  reduce 112 (src line 268)


state 53
	place:  last.type 
	place:  last.type CORNER 
	blockname:  last.BLOCK '.' PLACENAME 
	last:  last.LAST 
	expr:  last.BLOCK '.' VARNAME 

	BOX  shift 142
	LINE  shift 146
	ARROW  shift 147
	CIRCLE  shift 143
	ELLIPSE  shift 144
	ARC  shift 145
	SPLINE  shift 148
	BLOCK  shift 140
	LAST  shift 141
	.  error

	type  goto 139

state 54
	place:  NTH.type 
	place:  NTH.type CORNER 
	blockname:  NTH.BLOCK '.' PLACENAME 
	last:  NTH.LAST 
	expr:  NTH.BLOCK '.' VARNAME 

	BOX  shift 142
	LINE  shift 146
	ARROW  shift 147
	CIRCLE  shift 143
	ELLIPSE  shift 144
	ARC  shift 145
	SPLINE  shift 148
	BLOCK  shift 150
	LAST  shift 151
	.  error

	type  goto 149

state 55
	expr:  NOT.expr 

	PLACENAME  shift 52
	VARNAME  shift 46
	CORNER  shift 66
	HERE  shift 67
	LAST  shift 69
	NTH  shift 54
	NUMBER  shift 45
	LOG  shift 56
	EXP  shift 57
	SIN  shift 58
	COS  shift 59
	ATAN2  shift 60
	SQRT  shift 61
	RAND  shift 62
	MIN  shift 64
	MAX  shift 63
	INT  shift 65
	'+'  shift 49
	'-'  shift 48
	NOT  shift 55
	'('  shift 94
	.  error

	expr  goto 152
	asgn  goto 47
	place  goto 95
	blockname  goto 68
	last  goto 53

state 56
	expr:  LOG.'(' expr ')' 

	'('  shift 153
	.  error


state 57
	expr:  EXP.'(' expr ')' 

	'('  shift 154
	.  error


state 58
	expr:  SIN.'(' expr ')' 

	'('  shift 155
	.  error


state 59
	expr:  COS.'(' expr ')' 

	'('  shift 156
	.  error


state 60
	expr:  ATAN2.'(' expr ',' expr ')' 

	'('  shift 157
	.  error


state 61
	expr:  SQRT.'(' expr ')' 

	'('  shift 158
	.  error


state 62
	expr:  RAND.'(' ')' 

	'('  shift 159
	.  error


state 63
	expr:  MAX.'(' expr ',' expr ')' 

	'('  shift 160
	.  error


state 64
	expr:  MIN.'(' expr ',' expr ')' 

	'('  shift 161
	.  error


state 65
	expr:  INT.'(' expr ')' 

	'('  shift 162
	.  error


state 66
	place:  CORNER.PLACENAME 
	place:  CORNER.last type 
	place:  CORNER.NTH type 
	place:  CORNER.blockname 

	PLACENAME  shift 163
	LAST  shift 69
	NTH  shift 165
	.  error

	blockname  goto 166
	last  goto 164

state 67
	place:  HERE.    (115)

	.  reduce 115 (src line 272)

